Fix demo boilerplate

--- a/slides/06_classification_demo_student.ipynb
+++ b/slides/06_classification_demo_student.ipynb
@@ -17,7 +17,8 @@
     "import numpy as np\n",
     "import sklearn\n",
     "import sklearn.neighbors \n",
-    "alt.data_transformers.enable(\"vegafusion\")\n",
+    "#alt.data_transformers.enable(\"vegafusion\")\n",
+    "alt.data_transformers.disable_max_rows()\n",
     "\n",
     "penguins_raw = pd.read_csv(\"https://raw.githubusercontent.com/mcnakhaee/palmerpenguins/master/palmerpenguins/data/penguins.csv\")\n",
     "\n",
